--- a/mortgage-front/src/app/Components/data-visualization/data-visualization.component.html
+++ b/mortgage-front/src/app/Components/data-visualization/data-visualization.component.html
@@ -1,1 +1,21 @@
-<p>data-visualization works!</p>
+
+<mat-divider></mat-divider>
+<section>
+
+  <div class="example-button-row">
+    <button mat-stroked-button (click)=" initializeChart1()"> גרף נתונים</button>
+  </div>
+
+  <div class="example-button-row">
+    <button mat-stroked-button (click)=" initializeChart2()"> גרף לידים / לקוחות לפי חודשים</button>
+  </div>
+
+  <div class="example-button-row">
+    <button mat-stroked-button (click)="initializeChart3()">נתוני מסמכי לקוחות</button>
+  </div>
+</section>
+
+<div>
+    <canvasjs-chart [options]="chartOptions"></canvasjs-chart>
+</div>
+
