--- a/mortgage-front/src/styles.scss
+++ b/mortgage-front/src/styles.scss
@@ -1,2 +1,13 @@
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+* {
+    font-family: EFT_Eiffel
+}
