--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.html
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.html
@@ -1,29 +1,16 @@
 <mat-sidenav-container class="sidenav-container">
-  <!-- Container for the side navigation menu and main content -->
-  <mat-sidenav #sidenav mode="side" position="end" class="sidenav">
-    <!-- Toolbar -->
+  <mat-sidenav #sidenav mode="side" position="end" class="sidenav" dir="rtl" opened
+    *ngIf="navigationMenuService.isOpened()">
     <mat-nav-list>
-      <!-- List of navigation items -->
-      @for (c of componentsList; track c) {
+      <ng-container *ngFor="let c of componentsList">
         <a mat-list-item [routerLink]="c.path">
-          <!-- Navigation item with a link to a component -->
           <span>{{ c.name }}</span>
-          <!-- Display the component name -->
           <mat-icon>{{ c.icon }}</mat-icon>
-          <!-- Display the component icon -->
         </a>
-      }
+      </ng-container>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content class="main-content">
-    <!-- Main content area -->
-    <!-- <button mat-icon-button (click)="toggleSidebar(); sidenav.toggle()" class="toggle-button"  >
-      <mat-icon>{{ isSidebarOpened ? 'close' : 'menu' }}</mat-icon>
-    </button> -->
-    <div class="content" style="margin-right: 50px;">
-      <!-- Container for th;e main content -->
-      <router-outlet></router-outlet>
-      <!-- Outlet for the routed component -->
-    </div>
+  <mat-sidenav-content class="mat-sidenav-content">
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
