--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
@@ -8,18 +8,29 @@
 
 .sidenav-container {
   height: max-content;
-  min-height: 80vh;
+  // min-height: 80vh;
+  display: flex;
+  height: 100vh;
 }
 
-.toggle-button {
-  background-color: rgba(203, 203, 203, 0.508) !important;
-  margin: -10px;
+// .toggle-button {
+//   background-color: rgba(203, 203, 203, 0.508) !important;
+//   margin: -10px;
+// }
+
+.mat-sidenav-content {
+  flex: 1;
+  padding: 20px;
 }
 
 .sidenav {
   box-shadow: 0 7px 20px 5px #00000088;
   width: 17vw;
-  min-width: max-content;
+  @media (min-width: 540px) {
+    display: flex;
+    margin: 0;
+    overflow: hidden;
+  }
 }
 
 .mat-list-item:hover {
@@ -38,7 +49,8 @@ a:hover {
   background-color: rgba(207, 210, 210, 0.327) !important;
 }
 
-mat-icon, span {
+mat-icon,
+span {
   background-color: transparent !important;
   padding-bottom: 5px;
 }
@@ -65,17 +77,16 @@ mat-icon {
   }
 
   .sidenav-container {
-    height: 50vh; /* Adjust height for smaller screens */
+    height: 50vh;
   }
 
   .sidenav {
-    width: 100vw; /* Adjust width for smaller screens */
-    min-width: 100vw; /* Adjust minimum width for smaller screens */
+    width: 100vw;
   }
 
-  .toggle-button {
-    background-color: rgba(203, 203, 203, 0.508) !important;
-    margin: 10px;
-    text-align-last: center;
-  }
+  // .toggle-button {
+  //   background-color: rgba(203, 203, 203, 0.508) !important;
+  //   margin: 10px;
+  //   text-align-last: center;
+  // }
 }
