--- a/mortgage-front/src/app/Components/user-list/user-list.component.html
+++ b/mortgage-front/src/app/Components/user-list/user-list.component.html
@@ -53,5 +53,5 @@
 
 
 <div class="page-div">
-<mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons dir="rtl"></mat-paginator>
+<mat-paginator class="paginator" [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons dir="rtl"></mat-paginator>
 </div>
