--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
@@ -6,7 +6,7 @@
   scroll-behavior: smooth;
 }
 
-// שלי
+// my
 // .sidenav-container {
 //   height: max-content;
 //   // min-height: 80vh;
@@ -19,14 +19,14 @@
 //   margin: -10px;
 // }
 
-// שלי
+// my
 // .mat-sidenav-content {
 //   flex: 1;
 //   padding: 20px;
 //   scroll-behavior: smooth;
 // }
 
-//שלה 
+//main branch
 .sidenav-container{
   min-height:550px;
 }
@@ -45,65 +45,65 @@ a{
 }
 
 
-// שלי
+// my
 // .main-content {
 //   padding: 20px;
 // }
 
-// שלי
+// my
 // a {
 //   padding: 10px;
 // }
 
-// שלי
+// my
 // a:hover {
 //   background-color: rgba(207, 210, 210, 0.327) !important;
 // }
 
-// שלי
+//my
 // mat-icon,
 // span {
 //   background-color: transparent !important;
 //   padding-bottom: 5px;
 // }
 
-// שלי
+// my
 // span {
 //   margin-left: 5px;
 // }
 
-// שלי
+// my
 // mat-icon {
 //   float: right;
 // }
 
-// שלי
+// my
 // @media screen and (max-width: 920px) {
 //   * {
 //     font-size: 15px;
 //   }
 
-// שלי
+// my
 //   .main-content {
 //     padding: 0px;
 //   }
 
-// שלי
+// my
 //   a {
 //     padding: 0px;
 //   }
 
-// שלי
+// my
 //   .sidenav-container {
 //     height: 50vh;
 //   }
 
-// שלי
+// my
 //   .sidenav {
 //     width: 100vw;
 //   }
 
-// שלי
+// my
   // .toggle-button {
   //   background-color: rgba(203, 203, 203, 0.508) !important;
   //   margin: 10px;
@@ -111,16 +111,16 @@ a{
   // }
 
 
-//שלה
+//main branch
 mat-icon {
   float: right;
 }
-//שלה
+//main branch
 .mat-sidenav-content {
   min-height: max-content;
   padding: 20px;
 }
-//שלה
+//main branch
 @media only screen and (max-width: 900px) {
   a{
     padding: 5px!important;
@@ -138,7 +138,7 @@ mat-icon {
     min-width: max-content;
   }
 }
-//שלה
+//main branch
 .main-content{
   height: 100vh;
   background-image: url("https://t4.ftcdn.net/jpg/02/27/74/75/240_F_227747577_VMbOvpidnsdkwCKMI8nUx7KdLQmF4wvQ.jpg");
