--- a/mortgage-front/src/app/Components/user-list/user-list.component.html
+++ b/mortgage-front/src/app/Components/user-list/user-list.component.html
@@ -25,8 +25,8 @@
             <td mat-cell *matCellDef="let user">{{user.email}}</td>
         </ng-container>
         <ng-container matColumnDef="role">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>דרגה</th>
-            <td mat-cell *matCellDef="let user">{{user.role}}</td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>תפקיד</th>
+            <td mat-cell *matCellDef="let user">{{user.role===0? 'לקוח':'מנהל'}}</td>
         </ng-container>
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>פעולות</th>
