--- a/mortgage-front/src/app/app.component.html
+++ b/mortgage-front/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!-- <p>app-component work!</p> -->
-<router-outlet></router-outlet>
-<app-example></app-example>
-<!-- <app-navigation-menu></app-navigation-menu> -->
+<app-customer-detail-modal></app-customer-detail-modal>
