update component- create document table

--- a/mortgage-front/src/app/app.component.html
+++ b/mortgage-front/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!-- <p>app-component work!</p> -->
-<router-outlet></router-outlet>
-<app-example></app-example>
+<!-- <router-outlet></router-outlet>
+<app-example></app-example> -->
 <!-- <app-navigation-menu></app-navigation-menu> -->
+
+
+<documents-list-customer></documents-list-customer>
