--- a/mortgage-front/src/app/Components/toolbar/toolbar.component.css
+++ b/mortgage-front/src/app/Components/toolbar/toolbar.component.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     /* background-color: rgba(135, 148, 162, 0.73); */
-    background-color: rgb(178, 189, 202);;
+    background-color: rgb(178, 189, 202);
 }
 
 .buttonLog {
