--- a/mortgage-front/src/app/Components/toolbar/toolbar.component.html
+++ b/mortgage-front/src/app/Components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="toolbar" [ngClass]="{'yesMobiletoolbar': isMob === true, 'noMobiletoolbar' : isMob === false }">
+<mat-toolbar color="primary" class="toolbar">
   <button class="buttonLog" mat-button routerLink="/login" (click)="loginOrLogout()">
     {{isLoggedIn? 'יציאה':'התחברות'}}
 
