--- a/mortgage-front/src/app/Components/user-list/user-list.component.html
+++ b/mortgage-front/src/app/Components/user-list/user-list.component.html
@@ -26,7 +26,7 @@
         </ng-container>
         <ng-container matColumnDef="role">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>תפקיד</th>
-            <td mat-cell *matCellDef="let user">{{user.role===0? 'לקוח':'מנהל'}}</td>
+            <td mat-cell *matCellDef="let user">{{getUserTypeString(user.role)}}</td>
         </ng-container>
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>פעולות</th>
