--- a/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.html
+++ b/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.html
@@ -61,6 +61,14 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="approval">
+        <th mat-header-cell *matHeaderCellDef><b> אישור פעולה </b></th>
+        <td mat-cell *matCellDef="let element">
+          <mat-checkbox class="example-margin"></mat-checkbox>
+        </td>
+      </ng-container>
+
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
