--- a/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.html
+++ b/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.html
@@ -1,4 +1,5 @@
 <main>
+  @if(dataSource.data.length>0){
   <div dir="rtl">
     <mat-form-field>
       <mat-label>חפש</mat-label>
@@ -54,9 +55,7 @@
               style="display: none"
             />
           </button>
-          }
-           @else {
-          התעדכן בתאריך:  {{ element.created_at }}
+          } @else { התעדכן בתאריך: {{ element.created_at }}
           }
         </td>
       </ng-container>
@@ -68,10 +67,16 @@
         </td>
       </ng-container>
 
-
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
+  } 
+  
+  @else 
+  {
+  <div>כרגע אין מסמכים</div>
+  }
+  
 </main>
 <!-- נסיון להוספת כפתור חץ -->
