--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
@@ -1,7 +1,7 @@
 * {
   font-size: 20px;
   text-align: right;
-  background-color: white !important;
+  // background-color: white !important;
   color: black;
   scroll-behavior: smooth;
 }
@@ -141,9 +141,10 @@ mat-icon {
   // background-image: url("https://t4.ftcdn.net/jpg/02/27/74/75/240_F_227747577_VMbOvpidnsdkwCKMI8nUx7KdLQmF4wvQ.jpg");
 // background-image: url("./assets/istockphoto-1393059175-612x612.jpg");
 // background-image: url('/assets/Mortgage2.bak.webp');
-// background-size: cover;
-}
-mat-sidenav-container{
-  background-image: url('/assets/Mortgage2.bak.webp');
+// background-size: cover; 
+background-image: url('/assets/Mortgage2.bak.webp');
   background-size: cover;
 }
+// mat-sidenav-container{
+ 
+// }
