magic link component

--- a/mortgage-front/src/app/Components/customer-detail-modal/customer-detail-modal.component.scss
+++ b/mortgage-front/src/app/Components/customer-detail-modal/customer-detail-modal.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   width: 70vh;
   margin: auto;
-  align-items: flex-end;
+  align-items: flex-start;
   
 
   /* Center align the form */
