add upload files option and improve exists components

--- a/mortgage-front/src/app/Components/customer-list/customer-list.component.html
+++ b/mortgage-front/src/app/Components/customer-list/customer-list.component.html
@@ -1,48 +1,48 @@
-<div id="content" >
-<mat-form-field dir="rtl">
-  <mat-label>חפש</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="לדוג. שם">
-</mat-form-field>
+<div id="content" style="padding: 25px;">
+  <mat-form-field dir="rtl">
+    <mat-label>חפש</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="לדוג. שם">
+  </mat-form-field>
 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" dir="rtl">
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>שם</th>
-    <td mat-cell *matCellDef="let customer">
-      {{customer.first_Name}} {{customer.last_Name}}
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="address">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>כתובת</th>
-    <td mat-cell *matCellDef="let customer">{{ customer.address }}</td>
-  </ng-container>
-  <ng-container matColumnDef="phone">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>טלפון</th>
-    <td mat-cell *matCellDef="let customer">{{ customer.phone }}</td>
-  </ng-container>
-  <ng-container matColumnDef="Customer_type">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>סוג לקוח</th>
-    <td mat-cell *matCellDef="let customer">{{getCustomerTypeString(customer.customer_type)}}</td>
-  </ng-container>
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef>פעולות</th>
-    <td mat-cell *matCellDef="let customer">
-      <button mat-icon-button color="primary" (click)="editCustomer(customer)">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-icon-button color="warn" (click)="deleteCustomer(customer)">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" dir="rtl">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>שם</th>
+      <td mat-cell *matCellDef="let customer">
+        {{customer.first_Name}} {{customer.last_Name}}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>כתובת</th>
+      <td mat-cell *matCellDef="let customer">{{ customer.address }}</td>
+    </ng-container>
+    <ng-container matColumnDef="phone">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>טלפון</th>
+      <td mat-cell *matCellDef="let customer">{{ customer.phone }}</td>
+    </ng-container>
+    <ng-container matColumnDef="Customer_type">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>סוג לקוח</th>
+      <td mat-cell *matCellDef="let customer">{{getCustomerTypeString(customer.customer_type)}}</td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>פעולות</th>
+      <td mat-cell *matCellDef="let customer">
+        <button mat-icon-button color="primary" (click)="editCustomer(customer)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="deleteCustomer(customer)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 
-<br>
-<mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons dir="rtl"></mat-paginator>
+  <br>
+  <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons dir="rtl"></mat-paginator>
 
-<button mat-fab color="primary" class="add-button" (click)="addCustomer()"
-  style="position: fixed;bottom: 8vh;left: 2vw;z-index: 1000;">
-  <mat-icon class="add-icon">add</mat-icon>
-</button>
+  <button mat-fab color="primary" class="add-button" (click)="addCustomer()"
+    style="position: fixed;bottom: 8vh;left: 2vw;z-index: 1000;">
+    <mat-icon class="add-icon">add</mat-icon>
+  </button>
 </div>
