--- a/mortgage-front/src/app/Components/user-list/user-list.component.css
+++ b/mortgage-front/src/app/Components/user-list/user-list.component.css
@@ -59,7 +59,9 @@
   font-weight: bold !important;
 
  }
-
+ tr:hover{
+  background-color: rgba(178, 189, 202, 0.058)!important;
+}
  .rtl-table-wrapper {
    width: 100%;
  }
