--- a/mortgage-front/src/app/app.component.html
+++ b/mortgage-front/src/app/app.component.html
@@ -1,9 +1,10 @@
 <app-toolbar></app-toolbar>
-<!-- @if(navigationMenuService.isOpened()){ -->
+<!-- <app-upload></app-upload> -->
 <navigation-menu [componentsList]="componentArray"></navigation-menu>
-<!-- } -->
-<!-- <app-lead></app-lead> -->
 <router-outlet></router-outlet>
+<!-- <app-file-upload></app-file-upload> -->
+
+<!-- <app-lead></app-lead> -->
 <!-- <example></example> -->
 <!-- <footer class="foot">
     <img src="/assets/logo_diversi.png" alt="diversitech" width="140px" height="140px">
