--- a/mortgage-front/src/app/Components/customer-list/customer-list.component.scss
+++ b/mortgage-front/src/app/Components/customer-list/customer-list.component.scss
@@ -27,13 +27,12 @@
 th {
   font-weight: bold !important;
 }
-
+tr:hover{
+  background-color: rgba(178, 189, 202, 0.058)!important;
+}
 #content {
   background-color: rgba(255, 255, 255, 0.602);
-  padding: 25px;
   border-radius: 40px;
-  // border: 3px solid rgb(178, 189, 202);
   min-width: max-content;
   min-height: 60vh;
-
 }
