--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.html
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.html
@@ -1,19 +1,21 @@
-<mat-sidenav-container class="sidenav-container" style="background-color: rgb(176, 172, 122);">
-  <mat-sidenav #sidenav mode="side" position="end" class="sidenav" dir="rtl" 
-  [opened]="navigationMenuService.isOpened()" >
-  <!-- <mat-sidenav #sidenav mode="side" position="end" class="sidenav" dir="rtl" opened *ngIf="navigationMenuService.isOpened()"> -->
-    <mat-nav-list dir="rtl" >
-      @for (c of componentsList; track c) {
-      <a mat-list-item [routerLink]="c.path">
-        <span>{{ c.name }}</span>
-        <mat-icon>{{ c.icon }}</mat-icon>
-      </a>
-      }
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content class="main-content" dir="rtl">
-    <div class="content" >
-      <router-outlet></router-outlet>
-    </div>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<div class="container">
+  <mat-sidenav-container class="sidenav-container" style="background: none;">
+    <mat-sidenav #sidenav mode="side" position="end" class="sidenav" dir="rtl"
+      [opened]="navigationMenuService.isOpened()">
+      <!-- <mat-sidenav #sidenav mode="side" position="end" class="sidenav" dir="rtl" opened *ngIf="navigationMenuService.isOpened()"> -->
+      <mat-nav-list dir="rtl">
+        @for (c of componentsList; track c) {
+        <a mat-list-item [routerLink]="c.path">
+          <span>{{ c.name }}</span>
+          <mat-icon>{{ c.icon }}</mat-icon>
+        </a>
+        }
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content class="main-content" dir="rtl" >
+      <div class="content"  style="background: none;">
+        <router-outlet  style="background: none;"></router-outlet>
+      </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
