--- a/mortgage-front/src/app/Components/user-list/user-list.component.html
+++ b/mortgage-front/src/app/Components/user-list/user-list.component.html
@@ -31,7 +31,7 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>פעולות</th>
             <td mat-cell *matCellDef="let user">
-                <button mat-icon-button color="primary"  [routerLink]="['/user-details', user.id]">
+                <button mat-icon-button color="primary" (click)="editOrAddUser(user.id)" >
                     <mat-icon>edit</mat-icon>
                 </button>
                 <button mat-icon-button color="warn" (click)="deleteUser(user.id)">
@@ -46,12 +46,13 @@
 </div>
 <br>
 
-<button mat-fab color="primary" class="add-button" [routerLink]="['/user-details', '-1']"
+<button mat-fab color="primary" class="add-button"  (click)="editOrAddUser(-1)"
     style="position: fixed;bottom: 8vh;left: 2vw;z-index: 1000;">
     <mat-icon class="add-icon">add</mat-icon>
 </button>
 
 
 <div class="page-div">
-<mat-paginator class="paginator" [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons dir="rtl"></mat-paginator>
+
+<mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons dir="rtl"></mat-paginator>
 </div>
