--- a/mortgage-front/src/app/Components/document-type-details/document-type-details.component.css
+++ b/mortgage-front/src/app/Components/document-type-details/document-type-details.component.css
@@ -1,12 +1,18 @@
-.document-type-edit-card{
+.document-type-edit-card {
   max-width: 800px;
   margin: auto;
   padding: 20px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7); /* Black box shadow */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+  height: 40vh;
+  /* Black box shadow */
+
 }
 
-.name-field{
-  margin-right: 7%;
+
+.div-warp-fields {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .button-group {
@@ -14,29 +20,36 @@
   justify-content: space-between;
   margin-top: 20px;
 }
-mat-checkbox{
+
+mat-checkbox {
   margin-right: 8%;
 }
+
 #content {
   background-color: rgba(255, 255, 255, 0.602);
-  padding: 25px;
+  padding: 8%;
   border-radius: 40px;
   /* border: 3px solid rgb(178, 189, 202); */
-  min-width: max-content;
-  height: 70vh;
+  /* min-width: max-content; */
+  height: 55vh;
 }
-.card-content{
+
+.card-content {
   margin-top: 3%;
 
 }
-@media screen and (max-width: 900px) {
-  .mat-form-field{
-    margin: 10px!important;
-    width: 15vw;
-    font-size: small;
-    height: 70px;
+
+@media screen and (max-width: 431px) {
+  .div-warp-fields {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
   }
-  mat-label{
-    font-size: small;
-  }
+
 }
+
+/* display: flex;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap; */
