--- a/mortgage-front/src/app/Components/user-list/user-list.component.css
+++ b/mortgage-front/src/app/Components/user-list/user-list.component.css
@@ -1,67 +1,78 @@
+.warp-users-div {
+  margin: auto;
+  padding: 20px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+  /* Black box shadow */
+  border-radius: 40px;
+  min-width: max-content;
+}
 
- .form-field {
-   margin-top: 2%;
- }
+.form-field {
+  margin-top: 2%;
+}
 
- .mat-form-field {
-   width: 100%;
+.mat-form-field {
+  width: 100%;
 
- }
+}
 
- .page-div {
-   width: 100% !important;
+.page-div {
+  width: 100% !important;
 
- }
+}
 
- .table-user {
-   background-color: white;
-   width: 100%;
- }
+.table-user {
+  background-color: white;
+  width: 100%;
+}
 
- * {
-   color: black;
- }
+* {
+  color: black;
+}
 
 
- .paginator {
-   width: 100% !important;
+.paginator {
+  width: 100% !important;
 
-   @media (min-width: 375px) {
-     /* width: 125%; */
-   }
+  @media (min-width: 375px) {
+    /* width: 125%; */
+  }
 
-   @media (min-width: 360px) {
-     /* width: 130%; */
-   }
+  @media (min-width: 360px) {
+    /* width: 130%; */
+  }
 
-   @media (min-width: 344px) {
-     /* width: 136%; */
-   }
+  @media (min-width: 344px) {
+    /* width: 136%; */
+  }
 
-   @media (min-width: 768px) {
-     /* width: 100%; */
-   }
+  @media (min-width: 768px) {
+    /* width: 100%; */
+  }
 
-   background-color: white;
-   /* רקע לבן */
- }
+  background-color: white;
+  /* רקע לבן */
+}
 
- mat-paginator {
-   width: 100%;
- }
+mat-paginator {
+  width: 100%;
+}
 
- th,
- td {
-   word-wrap: break-word;
+th,
+td {
+  word-wrap: break-word;
 
- }
- th{
+}
+
+th {
   font-weight: bold !important;
 
- }
- tr:hover{
-  background-color: rgba(178, 189, 202, 0.058)!important;
 }
- .rtl-table-wrapper {
-   width: 100%;
- }
+
+tr:hover {
+  background-color: rgba(178, 189, 202, 0.058) !important;
+}
+
+.rtl-table-wrapper {
+  width: 100%;
+}
